kustomize/node-web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: server
  ports:
    - name: http
      port: 80
      targetPort: http
